Refactor: word가 추가되면서 alphabet -> english로 변경
