# back/root/src/api/middlewares/validators/handValidator.ts
@@ -2,14 +2,14 @@ import { param, body } from "express-validator";
 import { validate } from "./result";
 
 export const handValidate = [
-  body("alphabet")
+  body("english")
     .exists()
-    .withMessage("알파벳 항목이 없습니다.")
+    .withMessage("영어 항목이 없습니다.")
     .bail()
     .trim()
     .notEmpty()
     .isLength({ min: 1 })
-    .withMessage("공백입니다. 입력된 알파벳이 없습니다.")
+    .withMessage("공백입니다. 입력된 영어이 없습니다.")
     .bail()
     .isString()
     .withMessage("string 으로 입력해주세요."),
@@ -33,4 +33,4 @@ export const handValidate = [
   validate,
 ];
 
-export const checkAlphabetParam = [param("alphabet").trim(), validate];
+export const checkenglishParam = [param("english").trim(), validate];
