# back/root/src/api/routes/handRouter.ts
@@ -2,16 +2,16 @@ import { Router, Request, Response, NextFunction } from "express";
 import HandService from "../../services/handService";
 import { MongoHandModel } from "../../db/models/Hand";
 import { IHand } from "../../models";
-import { checkAlphabetParam, handValidate } from "../middlewares/validators";
+import { checkenglishParam, handValidate } from "../middlewares/validators";
 
 const handRouter = Router();
 const handService = new HandService(new MongoHandModel());
 
 // 알파벳별 수화 데이터 가져오기
-handRouter.get("/:alphabet", checkAlphabetParam, async (req: Request, res: Response, next: NextFunction) => {
+handRouter.get("/:english", checkenglishParam, async (req: Request, res: Response, next: NextFunction) => {
   try {
-    const { alphabet } = req.params;
-    const data = await handService.get(alphabet);
+    const { english } = req.params;
+    const data = await handService.get(english);
     res.status(200).send(data);
   } catch (error) {
     res.status(400);
