# back/root/src/models/interfaces/IHandModel.ts
@@ -3,7 +3,7 @@ import { IHand } from "./IHand";
 export interface IHandModel {
   create(newHandData: IHand): Promise<Object>;
   findAll(): Promise<Object>;
-  findByAlphabet(alphabet: String): Promise<Object>;
+  findByEnglish(alphabet: String): Promise<Object>;
   update(id: any, toUpdate: Object): Promise<Object>;
   delete(_id: any): Promise<Object>;
 }
